# OpenCVShapes

./: CMakeLists.txt  Filters.cpp  Filters.hpp  Main.cpp  Makefile  README.md  Shape.cpp  Shape.hpp  ShapeDetection.cpp  shapes.txt
include/: Filters.hpp  Shape.hpp  ShapeDetection.hpp
